# Library-management

project Library/: Book.cpp  Book.h  CMakeLists.txt  Librarian.cpp  Librarian.h  Library.cpp  Library.h  LibraryInventory.cpp  LibraryInventory.h  Member.cpp  Member.h  Person.cpp  Person.h  Screen.cpp  Screen.h  Transaction.cpp  Transaction.h  main.cpp
